2002-04-05  Nick Drochak  <ndrochak@gol.com>

	* Enum.cs (Parse): Handle different underlying types.

2002/04/04 Nick Drochak <ndrochak@gol.com>

	* Enum.cs (IsDefined): Throw exception when type of value to look for
	is not the correct one.  Attempt to have it work with string values
	too, but not sure if the unit tests are getting that far yet.

2002-04-04  Nick Drochak  <ndrochak@gol.com>

	* Decimal.cs: Fix a couple of typos.

Wed Apr 3 19:46:00 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Enum.cs: the values array is of the enum and not of the underlying
	type. Updates and some bug fixes.
	* MonoType.cs: make the internalcall return FullName instead of the
	assembly qualified name.
	* Type.cs: make ToString () simply return FullName.

2002-04-03  Nick Drochak  <ndrochak@gol.com>

	* Type.cs (GetTypeCode): provide some of the implementation for this
	method.  It's still too simplistic to be considered complete.

2002-04-02  Dietmar Maurer  <dietmar@ximian.com>

	* Object.cs: fixed FieldGetter/FieldSetter signature

2002-04-02  Nick Drochak  <ndrochak@gol.com>

	* Environment.cs: add MonoTODO's on parts that should have it.

2002-04-01  Nick Drochak  <ndrochak@gol.com>

	* Enum.cs: added reality checks (check parameters to most methods that
	need them).

2002-03-30  Dietmar Maurer  <dietmar@ximian.com>

	* Object.cs: added FieldGetter/FieldSetter

2002-03-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IntegerFormatter.cs: fixed initialization error in static
	constructor.

2002-03-28  Dietmar Maurer  <dietmar@ximian.com>

	* Delegate.cs: added new field to store a trampoline function

2002-03-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* IntegerFormatter.cs: added workaround for bug #22668. First patch to
	make custom format strings work (not fully functional yet).

2002/03/28  Nick Drochak <ndrochak@gol.com>

	* IntegerFormatter.cs: Change class from internal to public.  Add
	necessary [CLSCompliant(false)] attributes.
